npm change for heroku

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "projectsix",
   "version": "0.0.0",
+  "engines": {
+    "npm": "6.1.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
